[tool.poetry]
name = "language-model-demystifier"
version = "0.1.0"
description = ""
authors = ["Sebastian Schramm <schrammsm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
transformers = {extras = ["protobuf", "torch"], version = "^4.35.2"}
sentence-transformers = "^2.2.2"
protobuf = "^4.25.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
pytest = "^7.4.3"
flake8 = "^6.1.0"
isort = "^5.12.0"
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
